{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 54,
  "lineage": "0c6f9b9c-051f-2ded-955e-c38ab960d30f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-846144fe"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-846144fe"
                ]
              }
            ],
            "id": "igw-100b826b",
            "internet_gateway_id": "igw-100b826b",
            "owner_id": "753866442377"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753866442377:vpc/vpc-846144fe",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-f77e489b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ce5a9db4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-846144fe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3ee34340",
            "owner_id": "753866442377",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753866442377:vpc/vpc-846144fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00dd517d",
            "default_route_table_id": "rtb-3ee34340",
            "default_security_group_id": "sg-d1087185",
            "dhcp_options_id": "dopt-ce5a9db4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-846144fe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3ee34340",
            "owner_id": "753866442377"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:753866442377:loadbalancer/udagram-api-lb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "udagram-api-lb-1178005182.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "udagram-api-lb",
            "idle_timeout": 600,
            "instances": [
              "i-0376c2af5c37fa7ce",
              "i-0a1a1241115881d69",
              "i-0a93f1ac5312f03fd"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "udagram-api-lb",
            "security_groups": [
              "sg-0b2778ab1789272c2",
              "sg-0caf4f1a0c838f0df"
            ],
            "source_security_group": "753866442377/udagram-common",
            "source_security_group_id": "sg-0caf4f1a0c838f0df",
            "subnets": [
              "subnet-04275240e503486c4",
              "subnet-05b8a6d64c94b4abd",
              "subnet-0f4a5f530e7172c7b"
            ],
            "tags": {
              "Cluster": "udagram",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.elb",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4f4704a9146742a",
            "arn": "arn:aws:ec2:us-east-1:753866442377:instance/i-039c4fcdc44f2ec4f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039c4fcdc44f2ec4f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05555e8f5f478f8a1",
            "private_dns": "ip-172-31-192-4.ec2.internal",
            "private_ip": "172.31.192.4",
            "public_dns": "ec2-3-83-13-4.compute-1.amazonaws.com",
            "public_ip": "3.83.13.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-015780e2e49fc9162",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common",
              "udagram-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b8a6d64c94b4abd",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-bastion",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-002f558ea730b4531",
              "sg-0caf4f1a0c838f0df"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.ssh",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4f4704a9146742a",
            "arn": "arn:aws:ec2:us-east-1:753866442377:instance/i-0a93f1ac5312f03fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-0a93f1ac5312f03fd",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f39eb5735c8decf5",
            "private_dns": "ip-172-31-192-137.ec2.internal",
            "private_ip": "172.31.192.137",
            "public_dns": "ec2-54-144-197-8.compute-1.amazonaws.com",
            "public_ip": "54.144.197.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0deeebbce9bfcc044",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b8a6d64c94b4abd",
            "tags": {
              "Name": "udagram-cp-1",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0caf4f1a0c838f0df"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4f4704a9146742a",
            "arn": "arn:aws:ec2:us-east-1:753866442377:instance/i-0376c2af5c37fa7ce",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-0376c2af5c37fa7ce",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c8ccf6beb932ff76",
            "private_dns": "ip-172-31-193-122.ec2.internal",
            "private_ip": "172.31.193.122",
            "public_dns": "ec2-54-90-140-15.compute-1.amazonaws.com",
            "public_ip": "54.90.140.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-065e320590db01c72",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04275240e503486c4",
            "tags": {
              "Name": "udagram-cp-2",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0caf4f1a0c838f0df"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4f4704a9146742a",
            "arn": "arn:aws:ec2:us-east-1:753866442377:instance/i-0a1a1241115881d69",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-0a1a1241115881d69",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a7c2cc3d40fe6572",
            "private_dns": "ip-172-31-194-139.ec2.internal",
            "private_ip": "172.31.194.139",
            "public_dns": "ec2-18-209-172-203.compute-1.amazonaws.com",
            "public_ip": "18.209.172.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0b6c2080e1efe8146",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4a5f530e7172c7b",
            "tags": {
              "Name": "udagram-cp-3",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0caf4f1a0c838f0df"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753866442377:security-group/sg-0caf4f1a0c838f0df",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0caf4f1a0c838f0df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow all incomming traffic from members of this group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "udagram-common",
            "name_prefix": null,
            "owner_id": "753866442377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-846144fe"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753866442377:security-group/sg-0b2778ab1789272c2",
            "description": "kube-api firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2778ab1789272c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone to connect to tcp/6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram-api-lb",
            "name_prefix": null,
            "owner_id": "753866442377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram"
            },
            "timeouts": null,
            "vpc_id": "vpc-846144fe"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753866442377:security-group/sg-002f558ea730b4531",
            "description": "ssh access",
            "egress": [],
            "id": "sg-002f558ea730b4531",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incomming SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "udagram-ssh",
            "name_prefix": null,
            "owner_id": "753866442377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram"
            },
            "timeouts": null,
            "vpc_id": "vpc-846144fe"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outgoing traffic",
            "from_port": 0,
            "id": "sgrule-912198482",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0caf4f1a0c838f0df",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "allow all incomming traffic from members of this group",
            "from_port": 0,
            "id": "sgrule-3195252457",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0caf4f1a0c838f0df",
            "self": true,
            "source_security_group_id": "sg-0caf4f1a0c838f0df",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeports",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753866442377:subnet/subnet-05b8a6d64c94b4abd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.192.0/24",
            "id": "subnet-05b8a6d64c94b4abd",
            "map_public_ip_on_launch": true,
            "owner_id": "753866442377",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-us-east-1a",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-846144fe"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753866442377:subnet/subnet-04275240e503486c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.193.0/24",
            "id": "subnet-04275240e503486c4",
            "map_public_ip_on_launch": true,
            "owner_id": "753866442377",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-us-east-1b",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-846144fe"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753866442377:subnet/subnet-0f4a5f530e7172c7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.194.0/24",
            "id": "subnet-0f4a5f530e7172c7b",
            "map_public_ip_on_launch": true,
            "owner_id": "753866442377",
            "tags": {
              "Cluster": "udagram",
              "Name": "udagram-us-east-1c",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-846144fe"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        }
      ]
    }
  ]
}